Start backporting some things